--- a/browser/base/content/appmenu-viewcache.inc.xhtml
+++ b/browser/base/content/appmenu-viewcache.inc.xhtml
@@ -196,8 +196,10 @@
                      label="&appMenuHelp.label;"
                      closemenu="none"
                      oncommand="PanelUI.showSubView('PanelUI-helpView', this)"/>
-#ifndef XP_MACOSX
       <toolbarseparator/>
+#ifndef XP_MACOSX
+      #include ../../extensions/extensibles/extension/builtins/appmenu/restartbutton.inc
+#endif
       <toolbarbutton id="appMenu-quit-button"
                      class="subviewbutton subviewbutton-iconic"
 #ifdef XP_WIN
@@ -207,7 +209,6 @@
 #endif
                      key="key_quitApplication"
                      command="cmd_quitApplication"/>
-#endif
     </vbox>
   </panelview>
 
