[WFX-305] Refactor extensibles
* [WFX-305] Initial restructure of extensibles.

* [WFX-305] Refactor about:preferences additional options.

* [WFX-305] Refactor TabFeatures.

* [WFX-305] Refactor PrivateTab.

* [WFX-305] Refactor StatusBar

* [WFX-305] Minor fixes for StatusBar, PrivateTab and TabFeatures.

* [WFX-305] Initial extensibles tests.

* [WFX-305] Stop loading background scripts for PrivateTab and StatusBar.

--- a/browser/base/content/appmenu-viewcache.inc.xhtml
+++ b/browser/base/content/appmenu-viewcache.inc.xhtml
@@ -197,7 +197,8 @@
                      closemenu="none"
                      oncommand="PanelUI.showSubView('PanelUI-helpView', this)"/>
 #ifndef XP_MACOSX
-      <toolbarseparator/>
+                     <toolbarseparator/>
+#include ../../extensions/extensibles/extension/builtins/appmenu/restartbutton.inc
       <toolbarbutton id="appMenu-quit-button"
                      class="subviewbutton subviewbutton-iconic"
 #ifdef XP_WIN
