--- a/browser/base/content/navigator-toolbox.inc.xhtml
+++ b/browser/base/content/navigator-toolbox.inc.xhtml
@@ -91,6 +91,7 @@
 
           <toolbarbutton id="alltabs-button"
                          class="toolbarbutton-1 chromeclass-toolbar-additional tabs-alltabs-button"
+                         delegatesanchor="true"
                          badged="true"
                          onkeypress="gTabsPanel.showAllTabsPanel(event);"
                          onmousedown="gTabsPanel.showAllTabsPanel(event);"
@@ -391,6 +392,7 @@
 
       <toolbarbutton id="downloads-button"
                      class="toolbarbutton-1 chromeclass-toolbar-additional"
+                     delegatesanchor="true"
                      badged="true"
                      key="key_openDownloads"
                      onmousedown="DownloadsIndicatorView.onCommand(event);"
@@ -422,6 +424,7 @@
 
       <toolbarbutton id="fxa-toolbar-menu-button" class="toolbarbutton-1 chromeclass-toolbar-additional subviewbutton-nav"
                      badged="true"
+                     delegatesanchor="true"
                      onmousedown="gSync.toggleAccountPanel(this, event)"
                      onkeypress="gSync.toggleAccountPanel(this, event)"
                      consumeanchor="fxa-toolbar-menu-button"
@@ -437,6 +440,7 @@
 
     <toolbarbutton id="nav-bar-overflow-button"
                    class="toolbarbutton-1 chromeclass-toolbar-additional overflow-button"
+                   delegatesanchor="true"
                    skipintoolbarset="true"
                    data-l10n-id="navbar-overflow">
       <box class="toolbarbutton-animatable-box">
@@ -446,6 +450,7 @@
 
     <toolbarbutton id="unified-extensions-button"
                    class="toolbarbutton-1"
+                   delegatesanchor="true"
                    data-l10n-id="unified-extensions-button"
                    hidden="true"
                    onkeypress="gUnifiedExtensions.togglePanel(event)"
@@ -457,6 +462,7 @@
                  removable="false">
       <toolbarbutton id="ion-button"
                      class="toolbarbutton-1"
+                     delegatesanchor="true"
                      hidden="true"
                      badged="true"
                      tooltiptext="Ion"
@@ -464,12 +470,14 @@
                      onkeypress="switchToTabHavingURI('about:ion', true);"/>
       <toolbarbutton id="whats-new-menu-button"
                      class="toolbarbutton-1"
+                     delegatesanchor="true"
                      hidden="true"
                      badged="true"
                      onmousedown="PanelUI.showSubView('PanelUI-whatsNew', this, event);"
                      onkeypress="PanelUI.showSubView('PanelUI-whatsNew', this, event);"/>
       <toolbarbutton id="PanelUI-menu-button"
                      class="toolbarbutton-1"
+                     delegatesanchor="true"
                      badged="true"
                      consumeanchor="PanelUI-button"
                      data-l10n-id="appmenu-menu-button-closed2"/>
@@ -503,6 +511,7 @@
                      data-l10n-id="bookmarks-toolbar-placeholder-button"/>
       <toolbarbutton id="bookmarks-toolbar-button"
                      class="toolbarbutton-1"
+                     delegatesanchor="true"
                      flex="1"
                      data-l10n-id="bookmarks-toolbar-placeholder-button"
                      oncommand="PlacesToolbarHelper.onPlaceholderCommand();"/>
@@ -524,6 +533,7 @@
         <toolbarbutton type="menu"
                         id="PlacesChevron"
                         class="toolbarbutton-1"
+                        delegatesanchor="true"
                         collapsed="true"
                         data-l10n-id="bookmarks-toolbar-chevron"
                         onpopupshowing="document.getElementById('PlacesToolbar')
@@ -565,6 +575,7 @@
 
     <toolbarbutton id="bookmarks-menu-button"
                    class="toolbarbutton-1 chromeclass-toolbar-additional subviewbutton-nav"
+                   delegatesanchor="true"
                    type="menu"
                    data-l10n-id="bookmarks-menu-button"
                    tooltip="dynamic-shortcut-tooltip"
@@ -681,6 +692,7 @@
 
     <toolbarbutton id="library-button" class="toolbarbutton-1 chromeclass-toolbar-additional subviewbutton-nav"
                    removable="true"
+                   delegatesanchor="true"
                    onmousedown="PanelUI.showSubView('appMenu-libraryView', this, event);"
                    onkeypress="PanelUI.showSubView('appMenu-libraryView', this, event);"
                    closemenu="none"
